# qwertycoin

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODING.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE.txt  Makefile  Qwertycoin.cmake  README.docker.md  README.md  ReleaseNotes.txt  SECURITY.md  build-release.sh  easy_installer.sh  qwertycoin.kdev4  qwertycoin.mk  qwertycoin.project  qwertycoin.workspace
lib/: CMakeLists.txt  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  version.h.in
lib/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h  IBlockchainObserver.h
lib/Breakpad/: Breakpad.cpp  Breakpad.h
lib/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  Base64.cpp  Base64.h  BlockingQueue.cpp  BlockingQueue.h  ColouredMsg.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.cpp  FileMappedVector.h  HardwareInfo.cpp  HardwareInfo.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Lazy.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  (+31 more)
lib/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  Hardfork.cpp  Hardfork.h  IBlock.h  IBlockchainStorageObserver.h  ICore.h  ICoreObserver.h  IMinerHandler.h  ITimeProvider.h  ITransaction.h  (+23 more)
lib/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
lib/Global/: Checkpoints.h  Constants.cpp  Constants.h  CryptoNoteConfig.h  LMDBConfig.h  version.h.in
lib/HTTP/: HttpRequest.h  HttpResponse.h
lib/Http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
lib/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
lib/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
lib/Lmdb/: BlockchainDB.cpp  BlockchainDB.h  DBLMDB.cpp  DBLMDB.h  LMDBBlob.cpp  LMDBBlob.h  LMDBExceptions.h  Structures.h
lib/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
lib/Mnemonics/: chinese_simplified.h  dutch.h  electrum-words.cpp  electrum-words.h  english.h  french.h  german.h  italian.h  japanese.h  language_base.h  polish.h  portuguese.h  russian.h  singleton.h  spanish.h  ukrainian.h
lib/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
lib/P2p/: ConnectionContext.h  IP2pNodeInternal.cpp  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
lib/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
lib/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
lib/Serialization/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.cpp  MemoryStream.h  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
lib/System/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  Event.h  EventLock.cpp  EventLock.h  InterruptedException.h  Ipv4Address.cpp  Ipv4Address.h  OperationTimeout.h  RemoteContext.h  RemoteEventLock.cpp  RemoteEventLock.h  TcpStream.cpp  TcpStream.h
lib/Transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  CommonTypes.h  IBlockchainSynchronizer.h  IObservableImpl.h  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  (+8 more)
src/: CMakeLists.txt  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  Info.plist.in  qwertycoin.rc  version.cmake  version.h.in
tests/: CMakeLists.txt  HashTarget.cpp  Io.h  cryptolib.pl  cryptotest.pl
(+903 files in other folders)
